--- a/content/blogs/Untitledblog.Rmd
+++ b/content/blogs/Untitledblog.Rmd
@@ -7,7 +7,7 @@ description: Growing up in a boarding school and being out of my comfort zone fo
 draft: false
 image: pic07.jpg
 keywords: ""
-slug: purva1
+slug: purva
 title: Purva
 ---
 
