--- a/content/blogs/blogrep.Rmd
+++ b/content/blogs/blogrep.Rmd
@@ -13,6 +13,11 @@ title: Research papers and Articles
 
 *Research Paper 1:* 
 
+```{r}
+knitr::include_graphics("/Users/purvasikri/Desktop/my_website/static/img/blogs/RTIpaper.png", error = FALSE)
+```
+
+
 
 This paper titled **"Impact of COVID-19 on RTI, a comparative perspective from India to EU"** delineates the wringing of Right to Information during the COVID-19 pandemic. It delves into the political, social, and economic situation of India and the EU to understand why information asymmetry was so rampant and whether the media was captured by the government (out of fear or bribery) or were the polices such that RTI was given a much lower stance and constantly left behind.  
 
