--- a/content/blogs/Untitledblog.Rmd
+++ b/content/blogs/Untitledblog.Rmd
@@ -5,7 +5,7 @@ categories:
 date: "2017-10-31T22:42:51-05:00"
 description: Growing up in a boarding school and being out of my comfort zone form the age of eight - I have never been averse to risk.   From trying my hands at engineering to humanities, I found my raison d'etre upon my tryst with finance and statistics. Therefore, in    order to fullfil my personal and professional goals in the field of financial analytics, I have gained rudimentary knowledge in the     field of finanace, statistics, business analytics, and management and wish to practically apply it in my workspace.
 draft: false
-image: "PS.jpg"
+image: "TM.png"
 keywords: ""
 slug: purva
 title: Purva
