--- a/content/blogs/homework2.Rmd
+++ b/content/blogs/homework2.Rmd
@@ -107,7 +107,7 @@ tidyweather %>%
   NULL
 ```
 
-> AInference 1:
+> Inference 1:
 
 Although all of the graphs in the grid have a similar upwards trend, there are subtle differences in variability between months such as December/January and June/July. January is a month with much higher variability in weather while June does not. This is something that may be worth looking into for meteorologists.
 
@@ -249,8 +249,9 @@ plot <- approval_polllist %>%
        y='Average Approval Margin (Approve - Disapprove)') + #Y-label
   NULL
 
-ggsave(file='biden_plot.png', plot=plot, width=12, height=8) #Saving to adjust image width
-knitr::include_graphics("biden_plot.png", error=F)
+
+plot
+
 ```
 
 > Inference 4:
@@ -308,8 +309,8 @@ plot <- bike %>%
   labs(title="Monthly changes in TfL bike rentals", subtitle="Change from monthly average shown in blue and calculated between 2016-2019", x="", y="Bike rentals") +
   NULL
 
-ggsave(file='bike1_plot.png', plot=plot, width=12, height=8) # Create and save the plot
-knitr::include_graphics("bike1_plot.png", error=F)
+
+plot
 ```
 
 ### Percentage changes from the expected level of weekly rentals.
@@ -346,8 +347,8 @@ plot <- bike %>%
   labs(title="Weekly changes in TfL bike rentals", subtitle="% change from weekly averages calculated between 2016-2019", x="week", y="") +
   NULL
 
-ggsave(file='bike2_plot.png', plot=plot, width=12, height=8) # Create and save the plot
-knitr::include_graphics("bike2_plot.png", error=F)
+
+plot
 ```
 
 In collaborate with: Lazar Jelic, Valeria Morales, Hanlu Lin, Hao Ni, and Junna Yanai
