--- a/content/blogs/homework2.Rmd
+++ b/content/blogs/homework2.Rmd
@@ -3,7 +3,7 @@ categories:
 - ""
 - ""
 date: "2017-10-31T21:28:43-05:00"
-description: ""
+description: In a group project (assigned at London Business School), the visual analysis and hypothesis testing were performed for the datasets - Youth rish behaviour surveillance, IMDB ratings of directors, Pay discrimination (Omgea group), and BREXIT data. Please find the codes, graphs, t-test results, stated hypothesis, and the inferences in the blog. 
 draft: false
 image: Rdat2.png
 keywords: ""
