--- a/content/blogs/blogrep.Rmd
+++ b/content/blogs/blogrep.Rmd
@@ -3,7 +3,7 @@ categories:
 - ""
 - ""
 date: "2017-10-31T22:26:09-05:00"
-description: ""
+description: Some of my research papers and published articles on finance and social studies are provided with abstracts and    links to download the PDF version. The topics of cognitive capture  or RTI are now relevant more than ever, as the    pandemic left a huge scope for information asymetry and unavowed corruption. While it is not just the state but also the       financial and media sector that tend to get capured (not always consciously), full information can be found on the link       attached in the blog. 
 draft: false
 image: "RTIpaper.png"
 keywords: ""
@@ -16,7 +16,6 @@ title: Research papers and Articles
 ```{r}
 knitr::include_graphics("/Users/purvasikri/Desktop/my_website/static/img/blogs/RTIpaper.png", error = FALSE)
 ```
-
 
 
 This paper titled **"Impact of COVID-19 on RTI, a comparative perspective from India to EU"** delineates the wringing of Right to Information during the COVID-19 pandemic. It delves into the political, social, and economic situation of India and the EU to understand why information asymmetry was so rampant and whether the media was captured by the government (out of fear or bribery) or were the polices such that RTI was given a much lower stance and constantly left behind.  
