--- a/content/blogs/homework2.Rmd
+++ b/content/blogs/homework2.Rmd
@@ -13,7 +13,9 @@ title: Dplyr, tidyverse, ggplot, and t-test (using bootstrap).
 
 After cleaning and performing an exploratory data analysis on multiple data sets, ggplot was used to visualise and gather information about the spread of the data. Inferences were made from various types of plots and numerical relations (e.g. correlation).  
 
-### Setting up the markdown file to auto filter the data and plots
+
+
+#### Setting up the markdown file to auto filter the data and plots
 ```{r, setup, include=FALSE}
 knitr::opts_chunk$set(
   message = FALSE, 
@@ -29,7 +31,9 @@ knitr::opts_chunk$set(
 )
 ```
 
-### Loading the necessary libraries 
+
+
+#### Loading the necessary libraries 
 ```{r load-libraries, include=FALSE}
 library(tidyverse)
 library(mosaic)
@@ -47,10 +51,12 @@ library(infer)
 set.seed(1) #making results replicable by setting seed
 ```
 
+
 # Ananlysis 1 on Climate change and temperature anomalies 
 
 
-### Loading the data 
+
+#### Loading the data 
 ```{r weather_data, cache=TRUE}
 weather <- 
   read_csv("https://data.giss.nasa.gov/gistemp/tabledata_v4/NH.Ts+dSST.csv", 
@@ -58,19 +64,25 @@ weather <-
            na = "***")
 ```
 
-### Tidying the data 
+
+
+#### Tidying the data 
 ```{r tidyweather}
 tidyweather <- weather %>%
   select(1:13) %>% #Selecting Year and month variables
   pivot_longer(cols=2:13, names_to='month', values_to='delta') #Tidying the data from wide to long format so that we have a column for the months and the corresponding temperature data respectively
 ```
 
-### Checking for year, month, and delta columns in the tidyweather dataframe
+
+
+#### Checking for year, month, and delta columns in the tidyweather dataframe
 ```{r}
 skim(tidyweather)
 ```
 
-### Plotting Information
+
+
+#### Plotting Information
 ```{r scatter_plot}
 #Creating date variables for the tidyweather dataset
 tidyweather <- tidyweather %>% 
@@ -91,7 +103,9 @@ ggplot(tidyweather, aes(x=date, y = delta))+  #Plotting delta by date
   NULL
 ```
 
-### Scatterplot for each month
+
+
+#### Scatterplot for each month
 ```{r facet_wrap}
 tidyweather %>%
   ggplot(aes(x=Year, y=delta)) + #Plotting delta by Year
@@ -108,10 +122,11 @@ tidyweather %>%
 ```
 
 > Inference 1:
-
 Although all of the graphs in the grid have a similar upwards trend, there are subtle differences in variability between months such as December/January and June/July. January is a month with much higher variability in weather while June does not. This is something that may be worth looking into for meteorologists.
 
-### Creating an interval column for 1881-1920, 1921-1950, 1951-1980, 1981-2010
+
+
+#### Creating an interval column for 1881-1920, 1921-1950, 1951-1980, 1981-2010
 ```{r intervals}
 comparison <- tidyweather %>% #New data frame called comparison
   filter(Year>= 1881) %>%     #remove years prior to 1881
@@ -125,7 +140,9 @@ comparison <- tidyweather %>% #New data frame called comparison
   ))
 ```
 
-### Density plot to study the distribution of monthly deviations (`delta`), grouped by intervals we are interested in
+
+
+#### Density plot to study the distribution of monthly deviations (`delta`), grouped by intervals we are interested in
 ```{r density_plot}
 ggplot(comparison, aes(x=delta, fill=interval)) +
   geom_density(alpha=0.2) +   #density plot with tranparency set to 20%
@@ -136,7 +153,9 @@ ggplot(comparison, aes(x=delta, fill=interval)) +
   )
 ```
 
-### Average annual anomalies
+
+
+#### Average annual anomalies
 ```{r averaging}
 average_annual_anomaly <- tidyweather %>%
   filter(!is.na(delta)) %>% #Removing rows with NA's in the delta column 
@@ -156,11 +175,11 @@ ggplot(average_annual_anomaly, aes(x=Year, y=annual_average_delta))+
 ```
 
 >Inference 2:
-
 A one-degree global change is significant because it takes a vast amount of heat to warm all the oceans, atmosphere, and land by that much. In the past, a one- to two-degree drop was all it took to plunge the Earth into the Little Ice Age.
 
 
-### Confidence interval for the average annual delta since 2011
+
+#### Confidence interval for the average annual delta since 2011
 ```{r, calculate_CI_using_formula}
 formula_ci <- comparison %>% 
   group_by(interval) %>%
@@ -179,7 +198,9 @@ formula_ci <- comparison %>%
 formula_ci
 ```
 
-### Bootstrap Simulation
+
+
+#### Bootstrap Simulation
 ```{r, calculate_CI_using_bootstrap}
 boot_ci <- comparison %>%
   group_by(interval) %>%
@@ -193,12 +214,13 @@ boot_ci
 ```
 
 > Inference 3:
-
 We construct a 95% confidence interval both using the formula and a bootstrap simulation. The result shows that the true mean lies within the interval calculated with 95% confidence. The fact that this confidence interval does not contain zero shows that the difference between the means is statistically significant. Hence, using our result, we can conclude that the increase in temprature is statistically significant and that global warming is progressing. 
 
 
 
 # Analysis 2 on Biden's Approval Margins
+
+
 ```{r, cache=TRUE}
 # Import approval polls data directly off fivethirtyeight website
 approval_polllist <- read_csv('https://projects.fivethirtyeight.com/biden-approval-data/approval_polllist.csv') 
@@ -217,7 +239,8 @@ glimpse(approval_polllist)
 ```
 
 
-### Biden Approval Margin graph
+
+#### Biden Approval Margin graph
 ```{r}
 plot <- approval_polllist %>%
   mutate(week=week(enddate)) %>% #Creating a new column called week by extracting the week from the enddate variable
@@ -255,12 +278,14 @@ plot
 ```
 
 > Inference 4:
-
 The confidence interval for 'week 4' ranges from 9.14 to 19.6828 with a mean of 14.41 and standard deviation of 10.25, while 'week 25' ranges from 10.30 to 12.7523 with a mean of 11.53 and a standard deviation of 4.74. This is mainly due to the number of data points. For 'week 4' we only have 17 data points to work with, while 'week 25' has 60. With a larger set of data to work with, we are able to create narrower intervals with the same level of confidence. 
+
 
 # Analysis 3 on Excess rentals in TfL bike sharing
 
-### Loading and cleaning the latest Tfl data
+
+
+#### Loading and cleaning the latest Tfl data
 ```{r, get_tfl_data, cache=TRUE}
 setwd('/Users/purvasikri/Desktop/my_website/data')
 url <- "https://data.london.gov.uk/download/number-bicycle-hires/ac29363e-e0cb-47cc-a97a-e216d900a6b0/tfl-daily-cycle-hires.xlsx"
@@ -282,7 +307,9 @@ bike <- bike0 %>%
           week = isoweek(day))
 ```
 
-### Graphs
+
+
+#### Graphs
 ```{r}
 # Clean the data 
 bike_exp <- bike %>%
@@ -313,7 +340,8 @@ plot <- bike %>%
 plot
 ```
 
-### Percentage changes from the expected level of weekly rentals.
+
+#### Percentage changes from the expected level of weekly rentals.
 ```{r}
 # Clean the data
 bike_exp_week <- bike %>%
