--- a/content/blogs/homework3.Rmd
+++ b/content/blogs/homework3.Rmd
@@ -5,7 +5,7 @@ categories:
 date: "2017-10-31T22:26:13-05:00"
 description: In the second group project (assigned at London Business School) - tidyverse, hypothesis testing, and ggplot functtions have been used to gauge multiple datasets and present the concievable inferences. Kindly have a look at the blog for codes, graphs, drafted hypothesis, and inferences. 
 draft: false
-image: eda.png
+image: finalpc.png
 keywords: ""
 slug: blockchain
 title: EDA and Data Analysis  
