--- a/content/blogs/blogrep.Rmd
+++ b/content/blogs/blogrep.Rmd
@@ -8,10 +8,10 @@ draft: false
 image: "RTIpaper.png"
 keywords: ""
 slug: magna
-title: Research papers and Articles 
+title: Research Papers and Articles 
 ---
 
-*Research Paper 1:* 
+**Research Paper 1:**
 
 This paper titled **"Impact of COVID-19 on RTI, a comparative perspective from India to EU"** delineates the wringing of Right to Information during the COVID-19 pandemic. It delves into the political, social, and economic situation of India and the EU to understand why information asymmetry was so rampant and whether the media was captured by the government (out of fear or bribery) or were the polices such that RTI was given a much lower stance and constantly left behind.  
 
@@ -19,9 +19,9 @@ The full research paper is available for view and download here [RTI during COVI
 
 ---
 
-*Research Paper 2:*
+**Research Paper 2:**
 
-```{r, echo = F, out.width="100%"}
+```{r, echo = F, out.width="80%"}
 knitr::include_graphics("/img/blogs/Capture.png", error = FALSE)
 ```
 
@@ -32,7 +32,7 @@ The full research paper is available for view and download here [Cognitive captu
 
 ---
 
-*Article 1:*
+**Article 1:**
 
 
 Assessing whether electronic vehicles are currently feasible in India or a far cry. An analysis on whether the infrastructure is capable of sustaining the new technology. Further, analysing that despite assuaging the issues of rampant pollution, when will the technology be affordable to the midlle-class, and if so, when will teher be enoigh charging points to cater to the needs of 1.8 billion people?
@@ -41,9 +41,7 @@ The full article is available for view and download here [Electronic vehicles](h
 
 ---
 
-*Article 2:*
-
-
+**Article 2:**
 
 Although patents are aimed at providing benefits to the inventor, while keeping in mind the best interests of public, sometimes this rudimental optimal point of mutual benefit is not achieved. Reaching this point is a convoluted process; as it is where ethics and law converge. Not patenting a drug could lead to low levels of motivation amongst the investors, while patenting it could lead to unwarranted animal/human testing, lack of access of the drug, increase in costs, and other dilemmas regarding patenting genetic material. 
 
