--- a/content/blogs/blogrep.Rmd
+++ b/content/blogs/blogrep.Rmd
@@ -45,5 +45,5 @@ The full article is available for view and download here [Electronic vehicles](h
 
 Although patents are aimed at providing benefits to the inventor, while keeping in mind the best interests of public, sometimes this rudimental optimal point of mutual benefit is not achieved. Reaching this point is a convoluted process; as it is where ethics and law converge. Not patenting a drug could lead to low levels of motivation amongst the investors, while patenting it could lead to unwarranted animal/human testing, lack of access of the drug, increase in costs, and other dilemmas regarding patenting genetic material. 
 
-The full article is available for view and download here [IPR](https://docs.google.com/document/d/1ar2b4H2yWt_zZf4YLz5Z5nKPK4hJeq5W/edit?usp=sharing&ouid=107166632087239457492&rtpof=true&sd=true)
+The full article is available for view and download here [Intellectual property rights](https://docs.google.com/document/d/1ar2b4H2yWt_zZf4YLz5Z5nKPK4hJeq5W/edit?usp=sharing&ouid=107166632087239457492&rtpof=true&sd=true)
 
